blosm/pml/pml_grammar/pmlParser.py
# Generated from pml.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class pmlParser ( Parser ):

    grammarFileName = "pml.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'@name'", "'level'", "'symmetry'", "'use'", 
                     "'faces'", "'sharpEdges'", "'attr'", "'bldgAttr'", 
                     "'random_normal'", "'random_weighted'", "'if'", "'use_from'", 
                     "'per_building'", "'rgb'", "'rgba'", "'@roof'", "'all'", 
                     "'item'", "'.'", "'style'", "'or'", "'and'", "'not'", 
                     "'in'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'@'", "'{'", "'}'", "'('", 
                     "')'", "'['", "']'", "'|'", "','", "':'", "';'", "'+'", 
                     "'-'", "'*'", "'/'", "'>'", "'>='", "'<'", "'<='", 
                     "'=='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "OR", "AND", "NOT", "IN", "IDENTIFIER", 
                      "STRING_LITERAL", "HEX_NUMBER", "NUMBER", "FLOAT", 
                      "INT", "STRUDEL", "LCURLY", "RCURLY", "LPAREN", "RPAREN", 
                      "LBRACK", "RBRACK", "PIPE", "COMMA", "COLON", "SEMI", 
                      "PLUS", "MINUS", "TIMES", "DIV", "GT", "GE", "LT", 
                      "LE", "EQ", "COMMENT", "WS" ]

    RULE_styles = 0
    RULE_named_block = 1
    RULE_elements = 2
    RULE_element = 3
    RULE_attributes = 4
    RULE_attribute = 5
    RULE_sym_expression = 6
    RULE_use_expression = 7
    RULE_smooth_expression = 8
    RULE_markup_block = 9
    RULE_expression = 10
    RULE_alternatives = 11
    RULE_function = 12
    RULE_nested_list = 13
    RULE_def_name = 14
    RULE_conditional = 15
    RULE_spec_conditions = 16
    RULE_spec_condition = 17
    RULE_condition = 18
    RULE_bool_expr = 19
    RULE_cmp_expr = 20
    RULE_in_expr = 21
    RULE_arith_expr = 22
    RULE_arith_atom = 23
    RULE_ari_lparen = 24
    RULE_ari_rparen = 25
    RULE_const_atom = 26
    RULE_constant = 27
    RULE_simple_expr = 28
    RULE_element_name = 29
    RULE_attr_name = 30
    RULE_identifier = 31
    RULE_relop = 32
    RULE_logicop = 33
    RULE_notop = 34
    RULE_inop = 35
    RULE_arith_op = 36
    RULE_number = 37
    RULE_string_literal = 38

    ruleNames =  [ "styles", "named_block", "elements", "element", "attributes", 
                   "attribute", "sym_expression", "use_expression", "smooth_expression", 
                   "markup_block", "expression", "alternatives", "function", 
                   "nested_list", "def_name", "conditional", "spec_conditions", 
                   "spec_condition", "condition", "bool_expr", "cmp_expr", 
                   "in_expr", "arith_expr", "arith_atom", "ari_lparen", 
                   "ari_rparen", "const_atom", "constant", "simple_expr", 
                   "element_name", "attr_name", "identifier", "relop", "logicop", 
                   "notop", "inop", "arith_op", "number", "string_literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    OR=21
    AND=22
    NOT=23
    IN=24
    IDENTIFIER=25
    STRING_LITERAL=26
    HEX_NUMBER=27
    NUMBER=28
    FLOAT=29
    INT=30
    STRUDEL=31
    LCURLY=32
    RCURLY=33
    LPAREN=34
    RPAREN=35
    LBRACK=36
    RBRACK=37
    PIPE=38
    COMMA=39
    COLON=40
    SEMI=41
    PLUS=42
    MINUS=43
    TIMES=44
    DIV=45
    GT=46
    GE=47
    LT=48
    LE=49
    EQ=50
    COMMENT=51
    WS=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StylesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pmlParser.RULE_styles

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class NAMEDContext(StylesContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pmlParser.StylesContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EOF(self):
            return self.getToken(pmlParser.EOF, 0)
        def named_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pmlParser.Named_blockContext)
            else:
                return self.getTypedRuleContext(pmlParser.Named_blockContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNAMED" ):
                listener.enterNAMED(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNAMED" ):
                listener.exitNAMED(self)


    class UNNAMEDContext(StylesContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pmlParser.StylesContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def elements(self):
            return self.getTypedRuleContext(pmlParser.ElementsContext,0)

        def EOF(self):
            return self.getToken(pmlParser.EOF, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUNNAMED" ):
                listener.enterUNNAMED(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUNNAMED" ):
                listener.exitUNNAMED(self)



    def styles(self):

        localctx = pmlParser.StylesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_styles)
        self._la = 0 # Token type
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [pmlParser.T__0]:
                localctx = pmlParser.NAMEDContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 79 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 78
                    self.named_block()
                    self.state = 81 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==pmlParser.T__0):
                        break

                self.state = 83
                self.match(pmlParser.EOF)
                pass
            elif token in [pmlParser.T__1, pmlParser.IDENTIFIER, pmlParser.STRUDEL]:
                localctx = pmlParser.UNNAMEDContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.elements()
                self.state = 86
                self.match(pmlParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Named_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_LITERAL(self):
            return self.getToken(pmlParser.STRING_LITERAL, 0)

        def SEMI(self):
            return self.getToken(pmlParser.SEMI, 0)

        def elements(self):
            return self.getTypedRuleContext(pmlParser.ElementsContext,0)


        def getRuleIndex(self):
            return pmlParser.RULE_named_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamed_block" ):
                listener.enterNamed_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamed_block" ):
                listener.exitNamed_block(self)




    def named_block(self):

        localctx = pmlParser.Named_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_named_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(pmlParser.T__0)
            self.state = 91
            self.match(pmlParser.STRING_LITERAL)
            self.state = 92
            self.match(pmlParser.SEMI)
            self.state = 93
            self.elements()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pmlParser.ElementContext)
            else:
                return self.getTypedRuleContext(pmlParser.ElementContext,i)


        def getRuleIndex(self):
            return pmlParser.RULE_elements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElements" ):
                listener.enterElements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElements" ):
                listener.exitElements(self)




    def elements(self):

        localctx = pmlParser.ElementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_elements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.element()
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pmlParser.T__1) | (1 << pmlParser.IDENTIFIER) | (1 << pmlParser.STRUDEL))) != 0):
                self.state = 96
                self.element()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def spec_conditions(self):
            return self.getTypedRuleContext(pmlParser.Spec_conditionsContext,0)


        def LCURLY(self):
            return self.getToken(pmlParser.LCURLY, 0)

        def attributes(self):
            return self.getTypedRuleContext(pmlParser.AttributesContext,0)


        def RCURLY(self):
            return self.getToken(pmlParser.RCURLY, 0)

        def STRUDEL(self, i:int=None):
            if i is None:
                return self.getTokens(pmlParser.STRUDEL)
            else:
                return self.getToken(pmlParser.STRUDEL, i)

        def def_name(self):
            return self.getTypedRuleContext(pmlParser.Def_nameContext,0)


        def LPAREN(self):
            return self.getToken(pmlParser.LPAREN, 0)

        def condition(self):
            return self.getTypedRuleContext(pmlParser.ConditionContext,0)


        def RPAREN(self):
            return self.getToken(pmlParser.RPAREN, 0)

        def element_name(self):
            return self.getTypedRuleContext(pmlParser.Element_nameContext,0)


        def getRuleIndex(self):
            return pmlParser.RULE_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElement" ):
                listener.enterElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElement" ):
                listener.exitElement(self)




    def element(self):

        localctx = pmlParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_element)
        self._la = 0 # Token type
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==pmlParser.STRUDEL:
                    self.state = 102
                    self.match(pmlParser.STRUDEL)


                self.state = 105
                self.match(pmlParser.T__1)
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==pmlParser.STRUDEL:
                    self.state = 106
                    self.match(pmlParser.STRUDEL)
                    self.state = 107
                    self.def_name()


                self.state = 110
                self.spec_conditions()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==pmlParser.LPAREN:
                    self.state = 111
                    self.match(pmlParser.LPAREN)
                    self.state = 112
                    self.condition()
                    self.state = 113
                    self.match(pmlParser.RPAREN)


                self.state = 117
                self.match(pmlParser.LCURLY)
                self.state = 118
                self.attributes()
                self.state = 119
                self.match(pmlParser.RCURLY)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==pmlParser.STRUDEL:
                    self.state = 121
                    self.match(pmlParser.STRUDEL)


                self.state = 124
                self.element_name()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==pmlParser.STRUDEL:
                    self.state = 125
                    self.match(pmlParser.STRUDEL)
                    self.state = 126
                    self.def_name()


                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==pmlParser.LPAREN:
                    self.state = 129
                    self.match(pmlParser.LPAREN)
                    self.state = 130
                    self.condition()
                    self.state = 131
                    self.match(pmlParser.RPAREN)


                self.state = 135
                self.match(pmlParser.LCURLY)
                self.state = 136
                self.attributes()
                self.state = 137
                self.match(pmlParser.RCURLY)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pmlParser.AttributeContext)
            else:
                return self.getTypedRuleContext(pmlParser.AttributeContext,i)


        def getRuleIndex(self):
            return pmlParser.RULE_attributes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributes" ):
                listener.enterAttributes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributes" ):
                listener.exitAttributes(self)




    def attributes(self):

        localctx = pmlParser.AttributesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attributes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pmlParser.T__2) | (1 << pmlParser.T__3) | (1 << pmlParser.T__4) | (1 << pmlParser.T__5) | (1 << pmlParser.IDENTIFIER))) != 0):
                self.state = 141
                self.attribute()
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(pmlParser.COLON, 0)

        def sym_expression(self):
            return self.getTypedRuleContext(pmlParser.Sym_expressionContext,0)


        def SEMI(self):
            return self.getToken(pmlParser.SEMI, 0)

        def use_expression(self):
            return self.getTypedRuleContext(pmlParser.Use_expressionContext,0)


        def smooth_expression(self):
            return self.getTypedRuleContext(pmlParser.Smooth_expressionContext,0)


        def attr_name(self):
            return self.getTypedRuleContext(pmlParser.Attr_nameContext,0)


        def expression(self):
            return self.getTypedRuleContext(pmlParser.ExpressionContext,0)


        def markup_block(self):
            return self.getTypedRuleContext(pmlParser.Markup_blockContext,0)


        def getRuleIndex(self):
            return pmlParser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)




    def attribute(self):

        localctx = pmlParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attribute)
        self._la = 0 # Token type
        try:
            self.state = 171
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.match(pmlParser.T__2)
                self.state = 148
                self.match(pmlParser.COLON)
                self.state = 149
                self.sym_expression()
                self.state = 150
                self.match(pmlParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.match(pmlParser.T__3)
                self.state = 153
                self.match(pmlParser.COLON)
                self.state = 154
                self.use_expression()
                self.state = 155
                self.match(pmlParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 157
                _la = self._input.LA(1)
                if not(_la==pmlParser.T__4 or _la==pmlParser.T__5):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 158
                self.match(pmlParser.COLON)
                self.state = 159
                self.smooth_expression()
                self.state = 160
                self.match(pmlParser.SEMI)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 162
                self.attr_name()
                self.state = 163
                self.match(pmlParser.COLON)
                self.state = 164
                self.expression()
                self.state = 165
                self.match(pmlParser.SEMI)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 167
                self.attr_name()
                self.state = 168
                self.match(pmlParser.COLON)
                self.state = 169
                self.markup_block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sym_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(pmlParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return pmlParser.RULE_sym_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSym_expression" ):
                listener.enterSym_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSym_expression" ):
                listener.exitSym_expression(self)




    def sym_expression(self):

        localctx = pmlParser.Sym_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_sym_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(pmlParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Use_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(pmlParser.IDENTIFIER)
            else:
                return self.getToken(pmlParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(pmlParser.COMMA)
            else:
                return self.getToken(pmlParser.COMMA, i)

        def getRuleIndex(self):
            return pmlParser.RULE_use_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUse_expression" ):
                listener.enterUse_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUse_expression" ):
                listener.exitUse_expression(self)




    def use_expression(self):

        localctx = pmlParser.Use_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_use_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.match(pmlParser.IDENTIFIER)
            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pmlParser.COMMA:
                self.state = 176
                self.match(pmlParser.COMMA)
                self.state = 177
                self.match(pmlParser.IDENTIFIER)
                self.state = 182
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Smooth_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(pmlParser.ExpressionContext,0)


        def getRuleIndex(self):
            return pmlParser.RULE_smooth_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSmooth_expression" ):
                listener.enterSmooth_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSmooth_expression" ):
                listener.exitSmooth_expression(self)




    def smooth_expression(self):

        localctx = pmlParser.Smooth_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_smooth_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Markup_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(pmlParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(pmlParser.RBRACK, 0)

        def elements(self):
            return self.getTypedRuleContext(pmlParser.ElementsContext,0)


        def getRuleIndex(self):
            return pmlParser.RULE_markup_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMarkup_block" ):
                listener.enterMarkup_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMarkup_block" ):
                listener.exitMarkup_block(self)




    def markup_block(self):

        localctx = pmlParser.Markup_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_markup_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.match(pmlParser.LBRACK)
            self.state = 187
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pmlParser.T__1) | (1 << pmlParser.IDENTIFIER) | (1 << pmlParser.STRUDEL))) != 0):
                self.state = 186
                self.elements()


            self.state = 189
            self.match(pmlParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_expr(self):
            return self.getTypedRuleContext(pmlParser.Simple_exprContext,0)


        def function(self):
            return self.getTypedRuleContext(pmlParser.FunctionContext,0)


        def alternatives(self):
            return self.getTypedRuleContext(pmlParser.AlternativesContext,0)


        def getRuleIndex(self):
            return pmlParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = pmlParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expression)
        try:
            self.state = 194
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 191
                self.simple_expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 192
                self.function()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 193
                self.alternatives()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlternativesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pmlParser.FunctionContext)
            else:
                return self.getTypedRuleContext(pmlParser.FunctionContext,i)


        def PIPE(self, i:int=None):
            if i is None:
                return self.getTokens(pmlParser.PIPE)
            else:
